--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -58,9 +58,9 @@
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -71,10 +71,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                
+                <li><strong>Project date</strong>: 16 Aug, 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/abdul-hannan-QA/selenium_project_salespypepro">Selenium_project_salespypepro</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
