skill column chnage

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseeleven" class="accordion-collapse collapse" aria-labelledby="flush-headingeleven" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body"> <i class="bi-dot"> </i></div>
+                  <div class="accordion-body"> <i class="bi-dot"> </i> participated in scrum </div>
                 </div>
               </div>
 
@@ -324,7 +324,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body"><i class="bi-dot"> </i> Prepare test data, including valid and invalid inputs.</div>
                 </div>
               </div>
               <div class="accordion-item">
